--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,10 +13,13 @@
 }
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  color: black;
   background: #ededed;
 }
+
 input,
-button {
+button,
+option {
   border: none;
   outline: none;
   background: none;
@@ -31,16 +34,17 @@ button {
   overflow: hidden;
   position: relative;
   width: 900px;
-  height: 580px; /*550px*/
+  height: 650px; /*550px*/
   margin: 0 auto 100px;
   background: #fff;
+  top: 7%;
 }
 .form {
   position: relative;
   width: 640px;
   height: 100%;
   transition: transform 1.2s ease-in-out;
-  padding: 50px 30px 0;
+  padding: 30px 30px 0;
 }
 .sub-cont {
   overflow: hidden;
@@ -125,6 +129,7 @@ button {
   transition: transform 1.2s ease-in-out;
 }
 .img__text h2 {
+  margin-top: 100px;
   margin-bottom: 10px;
   font-weight: normal;
 }
@@ -201,7 +206,8 @@ label span {
   color: #cfcfcf;
   text-transform: uppercase;
 }
-input {
+input,
+select {
   display: block;
   width: 100%;
   margin-top: 5px;
@@ -267,6 +273,14 @@ input {
   height: 100vh;
 }
 
+.institute_list {
+  text-align: left;
+  padding: 0.5rem;
+}
+
+.centered_option {
+  text-align: center;
+}
 /* Responsive for tablet*/
 
 @media screen and (max-width: 1024px) {
@@ -337,13 +351,13 @@ input {
   }
 
   .submit {
-    width: 270px;
+    width: 80px;
   }
 
   .submit2 {
     display: block;
     margin: 0 auto;
-    width: 270px;
+    width: 80px;
     height: 36px;
     border-radius: 30px;
     color: #fff;
@@ -363,5 +377,9 @@ input {
     visibility: hidden;
     position: inherit;
     z-index: -1;
+  }
+
+  .institute_option {
+    width: 200px;
   }
 }
