--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -383,3 +383,12 @@ select {
     width: 200px;
   }
 }
+
+.clickMe {
+  position: absolute;
+  top: 17%;
+  left: 60%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 10%; /* Adjust the width as needed to fit your design */
+  cursor: pointer; /* Optional: to indicate it's clickable */
+}
