--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -434,3 +434,17 @@ select {
   text-align: center;
   justify-content: center;
 }
+
+.styles_textbox {
+  transition: box-shadow 0.3s ease-in-out;
+  /* Other styles you might have already */
+}
+
+.styles_textbox:focus {
+  outline: none; /* Removing the default browser outline */
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 1); /* Adjust as needed for the shadow effect */
+}
+
+.styles_textbox:hover {
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 1); /* Adjust for a more subtle hover effect */
+}
